build: upgrade to Java 25 & JavaFX 25.0.3 and configure native-access options